--- a/index.html
+++ b/index.html
@@ -129,28 +129,40 @@
         <h2 class="section-title">Чем мы занимаемся</h2>
         <ul class="section-work work">
           <li class="section-img">
-            <img
-              src="./images/img.jpg"
-              class="img"
-              alt="Рабочий стол, планшет"
-              width="370"
-            />
+            <div class="img-text">
+              <img
+                src="./images/img.jpg"
+                class="img"
+                alt="Рабочий стол, планшет"
+                width="370"
+              />
+
+              <p class="section-img-text">Десктопные приложения</p>
+            </div>
           </li>
           <li class="section-img">
-            <img
-              src="./images/img1.jpg"
-              class="img"
-              alt="Смартфон, ноутбук"
-              width="370"
-            />
+            <div class="img-text">
+              <img
+                src="./images/img1.jpg"
+                class="img"
+                alt="Смартфон, ноутбук"
+                width="370"
+              />
+
+              <p class="section-img-text">Мобильные приложения</p>
+            </div>
           </li>
           <li class="section-img">
-            <img
-              src="./images/img2.jpg"
-              class="img"
-              alt="Планшет"
-              width="370"
-            />
+            <div class="img-text">
+              <img
+                src="./images/img2.jpg"
+                class="img"
+                alt="Планшет"
+                width="370"
+              />
+
+              <p class="section-img-text">Дизайнерские решения</p>
+            </div>
           </li>
         </ul>
       </section>
