--- a/portfolio.html
+++ b/portfolio.html
@@ -84,6 +84,11 @@
               <a href="" class="card-link">
                 <div class="card-thumb">
                   <img src="./images/img11.jpg" alt="Ноутбук" width="370" />
+                  <p class="card-thumb-img">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
                 </div>
                 <div class="card-content">
                   <h2 class="card-title">Технокряк</h2>
