--- a/portfolio.html
+++ b/portfolio.html
@@ -84,7 +84,7 @@
               <a href="" class="card-link">
                 <div class="card-thumb">
                   <img src="./images/img11.jpg" alt="Ноутбук" width="370" />
-                  <p class="card-thumb-img">
+                  <p class="card-thumb-text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
