--- a/index.html
+++ b/index.html
@@ -62,14 +62,9 @@
       <!-- Герой -->
       <section class="hero">
         <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button data-open-modal type="button" class="hero-button">
+        <button data-modal-open type="button" class="hero-button">
           Заказать услугу
         </button>
-        <div class="backdrop is-hidden data-backdrop">
-          <div class="modal">
-            <button data-close-modal>Close</button>
-          </div>
-        </div>
       </section>
 
       <!-- Особливості -->
@@ -421,8 +416,8 @@
     </main>
 
     <!-- Футер -->
-    <div class="footer-color link-network">
-      <footer class="footer link-network">
+    <footer class="footer-color link-network">
+      <div class="footer link-network">
         <!-- Контактні дані -->
         <div>
           <a href="./index.html" class="logo-footer"
@@ -487,34 +482,21 @@
             </li>
           </ul>
         </div>
-      </footer>
+      </div>
+    </footer>
+    <!-- Модальне вікно -->
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button data-modal-close>Close</button>
+      </div>
     </div>
-    <!-- <script>
+    <script>
       const { height: pageHeaderHeight } = document
-        .querySelector(".page-header")
+        .querySelector(".header")
         .getBoundingClientRect();
 
       document.body.style.paddingTop = `${pageHeaderHeight}px`;
-    </script> -->
-    <script>
-      const refs = {
-        openModalBtn: document.querySelector("[data-open-modal]"),
-        closeModalBtn: document.querySelector("[data-close-modal]"),
-        backdrop: document.querySelector("[data-backdrop]"),
-      };
-
-      refs.openModalBtn.addEventListener("click", toggleModal);
-      refs.closeModalBtn.addEventListener("click", toggleModal);
-
-      refs.backdrop.addEventListener("click", logBackdropClick);
-
-      function toggleModal() {
-        refs.backdrop.classList.toggle("is-hidden");
-      }
-
-      function logBackdropClick() {
-        console.log("Это клик в бекдроп");
-      }
     </script>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
