--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
           >
           <ul class="site-nav">
             <li class="item">
-              <a href="./index.html" class="site-nav-сurrent">Студия</a>
+              <a href="./index.html" class="site-nav-сurrent hover-icon"
+                >Студия</a
+              >
             </li>
             <li class="item">
               <a href="./portfolio.html" class="site-nav-link">Портфолио</a>
@@ -487,7 +489,7 @@
     <!-- Модальне вікно -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button data-modal-close>Close</button>
+        <button class="modal-button" data-modal-close></button>
       </div>
     </div>
     <script>
