--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,11 @@
               <a href="./index.html" class="site-nav-link">Студия</a>
             </li>
             <li class="item">
-              <a href="./portfolio.html" class="site-nav-сurrent">Портфолио</a>
+              <a
+                href="./portfolio.html"
+                class="site-nav-сurrent hover-icon-portfolio"
+                >Портфолио</a
+              >
             </li>
             <li class="item"><a href="" class="site-nav-link">Контакты</a></li>
           </ul>
@@ -84,11 +88,14 @@
               <a href="" class="card-link">
                 <div class="card-thumb">
                   <img src="./images/img11.jpg" alt="Ноутбук" width="370" />
-                  <p class="card-thumb-text">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
-                  </p>
+                  <div class="card-thumb-text">
+                    <p class="text">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
                 <div class="card-content">
                   <h2 class="card-title">Технокряк</h2>
@@ -107,6 +114,14 @@
                     alt="Баскетболисты"
                     width="370"
                   />
+                  <div class="card-thumb-text">
+                    <p class="text">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
                 <div class="card-content">
                   <h2 class="card-title">Постер New Orlean vs Golden Star</h2>
@@ -125,6 +140,14 @@
                     alt="Лого ресторану"
                     width="370"
                   />
+                  <div class="card-thumb-text">
+                    <p class="text">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
                 <div class="card-content">
                   <h2 class="card-title">Ресторан Seafood</h2>
@@ -139,6 +162,14 @@
               <a href="" class="card-link">
                 <div class="card-thumb">
                   <img src="./images/img44.jpg" alt="Наушники" width="370" />
+                  <div class="card-thumb-text">
+                    <p class="text">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
                 <div class="card-content">
                   <h2 class="card-title">Проект Prime</h2>
@@ -153,6 +184,14 @@
               <a href="" class="card-link">
                 <div class="card-thumb">
                   <img src="./images/img55.jpg" alt="Две коробки" width="370" />
+                  <div class="card-thumb-text">
+                    <p class="text">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
                 <div class="card-content">
                   <h2 class="card-title">Проект Boxes</h2>
@@ -167,6 +206,14 @@
               <a href="" class="card-link">
                 <div class="card-thumb">
                   <img src="./images/img66.jpg" alt="Монитор" width="370" />
+                  <div class="card-thumb-text">
+                    <p class="text">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
                 <div class="card-content">
                   <h2 class="card-title">Inspiration has no Borders</h2>
@@ -181,6 +228,14 @@
               <a href="" class="card-link">
                 <div class="card-thumb">
                   <img src="./images/img77.jpg" alt="Книга" width="370" />
+                  <div class="card-thumb-text">
+                    <p class="text">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
                 <div class="card-content">
                   <h2 class="card-title">Издание Limited Edition</h2>
@@ -195,6 +250,14 @@
               <a href="" class="card-link">
                 <div class="card-thumb">
                   <img src="./images/img88.jpg" alt="Логотип" width="370" />
+                  <div class="card-thumb-text">
+                    <p class="text">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
                 <div class="card-content">
                   <h2 class="card-title">Проект LAB</h2>
@@ -209,6 +272,14 @@
               <a href="" class="card-link">
                 <div class="card-thumb">
                   <img src="./images/img99.jpg" alt="Ноутбук" width="370" />
+                  <div class="card-thumb-text">
+                    <p class="text">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
                 <div class="card-content">
                   <h2 class="card-title">Growing Business</h2>
