--- a/portfolio.html
+++ b/portfolio.html
@@ -31,11 +31,8 @@
               <a href="./index.html" class="site-nav-link">Студия</a>
             </li>
             <li class="item">
-              <a
-                href="./portfolio.html"
-                class="site-nav-сurrent hover-icon-portfolio"
-                >Портфолио</a
-              >
+              <!--hover-icon-portfolio -->
+              <a href="./portfolio.html" class="site-nav-сurrent">Портфолио</a>
             </li>
             <li class="item"><a href="" class="site-nav-link">Контакты</a></li>
           </ul>
