--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
           >
           <ul class="site-nav">
             <li class="item">
-              <a href="./index.html" class="site-nav-сurrent hover-icon"
-                >Студия</a
-              >
+              <!-- hover-icon -->
+              <a href="./index.html" class="site-nav-сurrent">Студия</a>
             </li>
             <li class="item">
               <a href="./portfolio.html" class="site-nav-link">Портфолио</a>
