--- a/index.html
+++ b/index.html
@@ -139,8 +139,9 @@
                 alt="Рабочий стол, планшет"
                 width="370"
               />
-
-              <p class="section-img-text">Десктопные приложения</p>
+              <div class="section-img-text">
+                <p>Десктопные приложения</p>
+              </div>
             </div>
           </li>
           <li class="section-img">
@@ -151,8 +152,9 @@
                 alt="Смартфон, ноутбук"
                 width="370"
               />
-
-              <p class="section-img-text">Мобильные приложения</p>
+              <div class="section-img-text">
+                <p>Мобильные приложения</p>
+              </div>
             </div>
           </li>
           <li class="section-img">
@@ -163,8 +165,9 @@
                 alt="Планшет"
                 width="370"
               />
-
-              <p class="section-img-text">Дизайнерские решения</p>
+              <div class="section-img-text">
+                <p>Дизайнерские решения</p>
+              </div>
             </div>
           </li>
         </ul>
